--- a/index.html
+++ b/index.html
@@ -26,9 +26,19 @@
   </head>
   <body>
     <main>
-      <img src="assets/images/image-omelette.jpeg" alt="image of omellete" class="phoneimg"/>
+      <div>
+        <img
+          src="assets/images/image-omelette.jpeg"
+          alt="image of omellete"
+          class="phoneimg"
+        />
+      </div>
       <section class="recipe-omelette container">
-        <img src="assets/images/image-omelette.jpeg" alt="image of omellete" class="desktopimg"/>
+        <img
+          src="assets/images/image-omelette.jpeg"
+          alt="image of omellete"
+          class="desktopimg"
+        />
         <h1 class="main-heading">Simple Omelette Recipe</h1>
         <p class="text-desc">
           An easy and quick dish, perfect for any meal. This classic omelette
