--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -20,113 +20,119 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Young+Serif&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Frontend Mentor | Recipe page</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <!-- Semantic HTML and Accessibility
+
+1)Load your stylesheet after Google Fonts. Make sure your stylesheet is loaded after Google Fonts in the <head> of your document. This avoids styles being applied without the correct fonts, which can cause layout shifts. ✅
+
+2)Avoid using words like "image," "photo," or "picture" in your alt attributes. Screen readers already announce that the element is an image. Focus on describing the content of the image succinctly and meaningfully. ✅
+
+3)Use <strong> instead of <span> in lists when emphasizing important text. <strong> has semantic meaning, indicating importance, and acts as a label for the list items, improving accessibility. ✅
+
+
+
+These changes will not only improve the accessibility and maintainability of your code but also help you develop solid practices for future projects. -->
   </head>
   <body>
     <main>
-      <div>
-        <img
-          src="assets/images/image-omelette.jpeg"
-          alt="image of omellete"
-          class="phoneimg"
-        />
-      </div>
       <section class="recipe-omelette container">
         <img
           src="assets/images/image-omelette.jpeg"
-          alt="image of omellete"
-          class="desktopimg"
+          alt="omellete"
+          class="omeletteimg"
         />
-        <h1 class="main-heading">Simple Omelette Recipe</h1>
-        <p class="text-desc">
-          An easy and quick dish, perfect for any meal. This classic omelette
-          combines beaten eggs cooked to perfection, optionally filled with your
-          choice of cheese, vegetables, or meats.
-        </p>
-        <div class="prep-time">
-          <h2>Preparation Time</h2>
-          <ul class="wait-time">
-            <li><span>Total</span>: Approximately 10 minutes</li>
-            <li><span>Preparation</span>: 5 minutes</li>
-            <li><span>Cooking</span>: 5 minutes</li>
-          </ul>
-        </div>
-        <div class="ingredient">
-          <h2 class="sub-heading">Ingredients</h2>
-          <ul class="ingredients">
-            <li>2-3 large eggs</li>
-            <li>Salt, to taste</li>
-            <li>Pepper, to taste</li>
-            <li>1 tablespoon of butter or oil</li>
-            <li>
-              Optional fillings: cheese, diced vegetables, cooked meats, herbs
-            </li>
-          </ul>
-        </div>
-        <div class="instruction">
-          <h2 class="sub-heading">Instructions</h2>
-          <ol class="instructions">
-            <li>
-              <span>Beat the eggs:</span> In a bowl, beat the eggs with a pinch
-              of salt and pepper until they are well mixed.You can add a
-              tablespoon of water or milk for a fluffier texture.
-            </li>
-            <li>
-              <span>Heat the pan</span>: Place a non-stick frying pan over
-              medium heat and add butter or oil.
-            </li>
-            <li>
-              <span>Cook the omelette:</span> Once the butter is melted and
-              bubbling, pour in the eggs.Tilt the pan to ensure the eggs evenly
-              coat the surface.
-            </li>
-            <li>
-              <span>Add fillings (optional):</span> When the eggs begin to set
-              at the edges but are still slightly runny in the middle, sprinkle
-              your chosen fillings over one half of the omelette.
-            </li>
-            <li>
-              <span>Fold and serve:</span> As the omelette continues to cook,
-              carefully lift one edge and fold it over the fillings.Let it cook
-              for another minute, then slide it onto a plate.
-            </li>
-            <li>
-              <span>Enjoy:</span> Serve hot, with additional salt and pepper if
-              needed.
-            </li>
-          </ol>
-        </div>
-        <div class="nutrition">
-          <!-- might remove this div-->
-          <h2 class="sub-heading">Nutrition</h2>
+        <div class="content">
+          <h1 class="main-heading">Simple Omelette Recipe</h1>
           <p class="text-desc">
-            The table below shows nutritional values per serving without the
-            additional fillings.
+            An easy and quick dish, perfect for any meal. This classic omelette
+            combines beaten eggs cooked to perfection, optionally filled with
+            your choice of cheese, vegetables, or meats.
           </p>
+          <div class="prep-time">
+            <h2>Preparation Time</h2>
+            <ul class="wait-time">
+              <li><strong>Total</strong>: Approximately 10 minutes</li>
+              <li><strong>Preparation</strong>: 5 minutes</li>
+              <li><strong>Cooking</strong>: 5 minutes</li>
+            </ul>
+          </div>
+          <div class="ingredient">
+            <h2 class="sub-heading">Ingredients</h2>
+            <ul class="ingredients">
+              <li>2-3 large eggs</li>
+              <li>Salt, to taste</li>
+              <li>Pepper, to taste</li>
+              <li>1 tablespoon of butter or oil</li>
+              <li>
+                Optional fillings: cheese, diced vegetables, cooked meats, herbs
+              </li>
+            </ul>
+          </div>
+          <div class="instruction">
+            <h2 class="sub-heading">Instructions</h2>
+            <ol class="instructions">
+              <li>
+                <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a
+                pinch of salt and pepper until they are well mixed.You can add a
+                tablespoon of water or milk for a fluffier texture.
+              </li>
+              <li>
+                <strong>Heat the pan</strong>: Place a non-stick frying pan over
+                medium heat and add butter or oil.
+              </li>
+              <li>
+                <strong>Cook the omelette:</strong> Once the butter is melted
+                and bubbling, pour in the eggs.Tilt the pan to ensure the eggs
+                evenly coat the surface.
+              </li>
+              <li>
+                <strong>Add fillings (optional):</strong> When the eggs begin to
+                set at the edges but are still slightly runny in the middle,
+                sprinkle your chosen fillings over one half of the omelette.
+              </li>
+              <li>
+                <strong>Fold and serve:</strong> As the omelette continues to
+                cook, carefully lift one edge and fold it over the fillings.Let
+                it cook for another minute, then slide it onto a plate.
+              </li>
+              <li>
+                <strong>Enjoy:</strong> Serve hot, with additional salt and
+                pepper if needed.
+              </li>
+            </ol>
+          </div>
+          <div class="nutrition">
+            <!-- might remove this div-->
+            <h2 class="sub-heading">Nutrition</h2>
+            <p class="text-desc">
+              The table below shows nutritional values per serving without the
+              additional fillings.
+            </p>
 
-          <table class="nutri-table">
-            <tr>
-              <th>Calories</th>
-              <td>277kcal</td>
-            </tr>
+            <table class="nutri-table">
+              <tr>
+                <th>Calories</th>
+                <td>277kcal</td>
+              </tr>
 
-            <tr>
-              <th>Carb</th>
-              <td>0g</td>
-            </tr>
+              <tr>
+                <th>Carb</th>
+                <td>0g</td>
+              </tr>
 
-            <tr>
-              <th>Protein</th>
-              <td>20g</td>
-            </tr>
+              <tr>
+                <th>Protein</th>
+                <td>20g</td>
+              </tr>
 
-            <tr>
-              <th>Fat</th>
-              <td>22g</td>
-            </tr>
-          </table>
+              <tr>
+                <th>Fat</th>
+                <td>22g</td>
+              </tr>
+            </table>
+          </div>
         </div>
       </section>
     </main>
